--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-thi sis testing
+<!DOCTYPE html>
+<html lang="ja">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-router@3.0.7/dist/vue-router.js"></script>
+    <!-- Components -->
+    <script src="./src/components/Navigation.js"></script>
+    <!-- Pages -->
+    <script src="./src/pages/one.js"></script>
+    <script src="./src/pages/two.js"></script>
+    <!-- Route -->
+    <script src="./src/route.js"></script>
+    <title>CDN Vue</title>
+  </head>
+  <body>
+    <div id="app">
+      <my-navbar></my-navbar>
+      <section class="section">
+        <div class="container">
+          <h1 class="title">{{ msg }}</h1>
+          <button @click="submit">gggg</button>
+          <router-view></router-view>
+        </div>
+      </section>
+    </div>
+
+    <script>
+      new Vue({
+        router,
+        el: "#app",
+        data: {
+          msg: "Hello Vue.js",
+        },
+        components: {
+          "my-navbar": Navigation,
+        },
+        methods: {
+            submit(){
+                alert(123);
+            }
+        },
+      });
+    </script>
+  </body>
+</html>
